# mono-quant

./: .gitignore  CHANGELOG.md  README.md  RELEASE_NOTES_v1.0.md  mkdocs.yml  pyproject.toml
.github/workflows/: README.md  ci.yml  docs.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/phases/01-core-quantization-foundation/: .continue-here.md  01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-static-quantization-&-i/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/phases/03-advanced-calibration-&-int4/: .continue-here.md  03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md  03-03-PLAN.md  03-03-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/phases/04-user-interfaces/: .continue-here.md  04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md  04-RESEARCH.md  04-user-interfaces-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: index.md
docs/about/: changelog.md  contributing.md  license.md
docs/cli/: index.md
docs/getting-started/: basic-usage.md  installation.md  quickstart.md
src/mono_quant/: __init__.py
src/mono_quant/api/: __init__.py  exceptions.py  quantize.py  result.py
src/mono_quant/calibration/: __init__.py  data.py  runner.py
src/mono_quant/cli/: __init__.py  commands.py  main.py  progress.py
src/mono_quant/config/: __init__.py  quant_config.py
src/mono_quant/core/: __init__.py  mappers.py  observers.py  quantizers.py  schemes.py
src/mono_quant/io/: __init__.py  formats.py  handlers.py  validation.py
src/mono_quant/modules/: __init__.py  (+2 more)
tests/: __init__.py  test_api.py
