[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mono-quant"
version = "1.1"
description = "Simple, reliable model quantization with minimal dependencies"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "thatAverageGuy"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "safetensors>=0.3",
    "tqdm>=4.66",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.7.0",
    "mkdocstrings[python]>=1.0.0",
]

[project.scripts]
monoquant = "mono_quant.cli.main:cli"
mq = "mono_quant.cli.main:cli"

[project.urls]
Homepage = "https://github.com/thatAverageGuy/mono-quant"
Repository = "https://github.com/thatAverageGuy/mono-quant"
Documentation = "https://thataverageguy.github.io/mono-quant"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long
    "N803",  # Argument name should be lowercase (allow P, Q for probability distributions)
    "N806",  # Variable in function should be lowercase (allow P, Q for probability distributions)
    "N812",  # Lowercase `functional` imported as non-lowercase `F` (standard PyTorch convention)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
